# mdbook-protobuf

./: Cargo.toml  README.md
demo/: Cargo.toml  build.rs
demo/docs/: book.toml  mdbook-protobuf.css
demo/docs/assets/: custom.css
demo/docs/src/: SUMMARY.md  intro.md
demo/docs/src/proto/: protocol_reference.md
demo/proto/: goodbye_world.proto  helloworld.proto  helloworld_same_namespace.proto  type_test.proto  type_test_child_package.proto  type_test_same_namespace.proto
demo/src/: main.rs
mdbook-protobuf/: Cargo.toml
mdbook-protobuf/src/: lib.rs  links.rs  main.rs  primitive.rs  view.rs
mdbook-protobuf/templates/: backlinks.html  comments.html  content_link.html  enum.html  enum_link.html  field.html  message.html  message_link.html  method.html  namespace.html  oneof_field.html  primitive.html  proto.html  service.html  source.html  symbol_link.html
