[package]
name = "mdbook-protobuf"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["mdbook", "protobuf"]
categories = ["development-tools::build-utils"]
repository = "https://github.com/zakhenry/mdbook-protobuf"
description = "mdbook-protobuf is for generating reference chapters from protobuf definitions"

[dependencies]
clap = "4.5.17"
semver = "1.0.23"
serde_json = "1.0.128"
anyhow = "1.0.89"
mdbook = "0.4.40"
log = "0.4.22"
env_logger = "0.11.5"
prost-types = "0.13.2"
prost = "0.13.2"
bytes = "1.7.1"
askama = "0.12.1"
pulldown-cmark-to-cmark = "17.0.0"
pulldown-cmark = "0.12.1"
regex = "1.10.6"
fuzzy-matcher = "0.3.7"
